<resources>
    <string name="app_name">Island Harvest</string>
    <string name="external_dir">GetSignature</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="title_activity_donation_entry">DonationEntry</string>
    <string name="food_description_hint">Food Description</string>
    <string name="food_amount_hint">Food amount</string>
    <string name="food_type_label">Food Type:</string>
    <string name="submit_text_button">Submit</string>
    <string name="update_food_entry">Update Food Entry</string>
    <string name="start_button">Start</string>
    <string name="complete_button">Complete</string>
    <string name="nameHint">Name</string>

    <string-array name="food_type">
        <item>Food Type</item>
        <item>Dry</item>
        <item>Frozen</item>
        <item>Perishable</item>
        <item>Non-Perishable</item>
    </string-array>

    <string-array name="food_descrip">
        <item>Food Description</item>
        <item>Non Foods</item>
        <item>Baby Food / Formula</item>
        <item>Beverage</item>
        <item>Bread &amp; Bakery</item>
        <item>Meals / Entrees / Soups</item>
        <item>Dairy Products</item>
        <item>Health &amp; Beauty Care</item>
        <item>Cleaning Products</item>
        <item>Juice 100%</item>
        <item>Meat / Fish / Poultry</item>
        <item>Mixed &amp; Assorted</item>
        <item>Pet Food/Care</item>
        <item>Produce Fresh</item>
        <item>Prepared &amp; Perishable</item>
    </string-array>

    <string name="title_activity_agency_info">AgencyInfoActivity</string>
    <string name="title_activity_donor_info">DonorInfoActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_get_signatures">GetSignaturesActivity</string>
    <string name="view_submission">View Submission</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="island_harvest_about">Island Harvest was created in 1992 by one woman with a cooler, a station wagon, and a strong desire to help people in need. Linda Breitstone, our founder, was infuriated that food from a local convenience store was being thrown away at the end of the day – with a safe house for women and children down the street. In response, she established Island Harvest and our mission, “to end hunger and reduce food waste on Long Island.”\n\nSince those early days, Island Harvest has become Long Island’s largest hunger relief organization. Our volunteers and staff now deliver millions of pounds of good, surplus food – much of which might otherwise go to waste – to a network of 570 Long Island-based food pantries, soup kitchens and other non-profit organization that offer feeding services for those in need. By doing this, we provide a vital supply of food to counter the sharply rising problem of hunger here.\n\nBy aggressively recruiting more businesses and members of the public to donate food and pioneering innovative distribution methods, we have increased the volume of food we pick up and deliver by 2.5 times since 2002. Since our inception, we have delivered 71 million pounds of food, supplementing close to 66 million meals.\n\nHunger awareness and education have long been a part of our programs, as they develop and strengthen key allies in our community.\n\n
In recent years, we have begun to attack hunger in targeted and strategic ways. The most visible example of this is our Weekend Backpack Feeding Program. Piloted in 2006, this initiative provides 35,000+ packs of nutritious food to schoolchildren who rely on school lunches and breakfasts and may not receive solid meals on weekends.</string>
    <string name="about_menu_label">About</string>
    <string name="title_activity_route_list">RouteListActivity</string>
</resources>
