<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_login"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.aaron.islandharvest.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <TextView
        android:id="@+id/donorTextView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:background="@color/white"
        android:padding="15dp"
        android:scrollbars="vertical"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/agencyTextView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/donorTextView"
        android:layout_margin="15dp"
        android:background="@color/white"
        android:padding="15dp"
        android:scrollbars="vertical"
        android:textSize="14sp" />

    <Button
        android:id="@+id/linkToFoodEntryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/agencyTextView"
        android:layout_centerHorizontal="true"
        android:textColor="@color/btn_login"
        android:background="@color/btn_login_bg"
        android:layout_margin="15dp"
        android:text="@string/update_food_entry" />

    <Button
        android:id="@+id/startTimeLogButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linkToFoodEntryButton"
        android:text="@string/start_button"
        android:textColor="@color/btn_login"
        android:background="@color/btn_login_bg"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="15dp"
        />

    <Button
        android:id="@+id/completeTimeLogButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startTimeLogButton"
        android:text="@string/complete_button"
        android:textColor="@color/btn_login"
        android:background="@color/btn_login_bg"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        />
</RelativeLayout>
